# Desktop-Apps

DnD Gm Tools##/: codeLines.txt  license.md  package-lock.json  package.json
DnD Gm Tools##/normal src/: index.js  scroll.css  style.css
DnD Gm Tools##/src/: index.html  index.js  leftClick.css  preload.js  saves.lnk  scroll.css  style.css
DnD##/: license.md  package-lock.json  package.json
DnD##/src/: characters.json  index.css  index.html  index.js  keyCodes.json  mainScreen.js  music.html  music.txt  options.json  originalOptions.json  preload.js  preload2.js  preload3.js  preload4.js  redirect.html  redirect2.html  saveTable.json  saveToLoad.json
Folders##/: license.md  package-lock.json  package.json  run (special folder).bat
Folders##/shortcut/: icon.cpp  shortcut.cpp
Folders##/src/: defaultIcon.txt  font.css  index.js  preload.js
Folders##/src-tauri/: 2  Cargo.toml  tauri.conf.json
Folders##/src-tauri/capabilities/: default.json
Folders##/src-tauri/src/: lib.rs
MangaHouse##/app/: package-lock.json  package.json
MiniGames##/: forge.config.js  license.md  package-lock.json  package.json
MiniGames##/src/: index.html  index.js  paleta.txt  preload.js  style.css
MusicPlayer/client/: pom.xml
MusicPlayer/docs/: allclasses-index.html  allpackages-index.html  element-list  help-doc.html  index.html  member-search-index.js  overview-summary.html  overview-tree.html  package-search-index.js  search.html  serialized-form.html  type-search-index.js
RandomHentai/: license.md  package-lock.json  package.json
RandomHentai/src/: bin.txt  getTags.html  (+6 more)
(+278 files in other folders)
